# foo

./: Cargo.toml  index.html  style.css
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
