[package]
name = "foo-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4.3"
serde = { version = "1.0.140", features = ["derive"] }
js-sys = "0.3.59"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
getrandom = { version = "0.2", features = ["js"] } # dep of boa needs "js" see https://docs.rs/getrandom/#webassembly-support
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
monaco = { git = "https://github.com/mikestaas/rust-monaco", branch = "update-to-new-api", features = ["yew-components"] }
boa_engine = "0.16.0"

[workspace]
members = ["src-tauri"]
